# ofocus

./: .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml
docs/: spec-from-template.md  spec-show-command.md  spec-taskpaper-import.md  spec-template-cli.md  spec-template-fragments.md
src/ofocus/: USAGE.md  __init__.py  bridge.py  cli.py  helpers.py  jxa.py  models.py  omni.py
src/ofocus/commands/: __init__.py  inbox.py  project.py  tag.py  task.py
tests/: test_bridge.py  test_cli.py  test_models.py  test_omni.py  test_project_view_helpers.py
