[project]
name = "ofocus"
version = "0.1.0"
description = "CLI for OmniFocus via OmniAutomation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click"]

[project.scripts]
ofocus = "ofocus.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ofocus"]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ofocus --cov-report=term-missing -q"
